@@ -219,6 +219,10 @@ Working version
 - #11058: basic debugging documentation in runtime/HACKING.adoc
   (Gabriel Scherer, review by ???)
 
+- #11199: Stop installing topdirs.cmi twice. The toplevel now reads topdirs.cmi
+  from +compiler-libs, as the debugger does.
+  (David Allsopp, review by Sébastien Hinderer)
+
 ### Build system:
 
 * #10893: Remove configuration options --disable-force-safe-string and
